# pdf2gif

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
pdf2gif/: __init__.py  cli.py
scripts/: README.md  pdf2gif-context-menu.reg  pdf2gif-converter.bat  remove-send-to-menu.bat  setup-send-to-menu.bat
