[metadata]
name = pdf2gif
version = 0.1.0
description = Convert PDF files to animated GIFs with customizable frame delays
long_description = file: README.md
long_description_content_type = text/markdown
author = Robert Haase
author_email = robert.haase@uni-leipzig.de
url = https://github.com/haesleinhuepf/pdf2gif
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/pdf2gif/issues
    Documentation = https://github.com/haesleinhuepf/pdf2gif#readme
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Topic :: Scientific/Engineering :: Image Processing
keywords = pdf, gif, converter, animation, image
license = MIT
license_file = LICENSE

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pdf2image>=3.0.0
    numpy>=1.20.0
    stackview>=0.7.0
    Pillow>=8.0.0

[options.packages.find]
include = pdf2gif*

[options.entry_points]
console_scripts =
    pdf2gif = pdf2gif.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[coverage:run]
source = pdf2gif
omit = 
    */tests/*
    */test_*
